--- a/public/acesso-privado.html
+++ b/public/acesso-privado.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acesso Privado - Grey's Anatomy</title>
+    <title>Acesso Privado </title>
     <link rel="stylesheet" href="assets/main.css">
 </head>
 
